[gd_scene load_steps=11 format=3 uid="uid://bs0do08ju7ll8"]

[ext_resource type="Script" path="res://src/screens/MainMenu.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://b485vsqlu714c" path="res://assets/sound/UI/Minimalist7.ogg" id="3_tccjc"]
[ext_resource type="PackedScene" uid="uid://b308w8k2ec0i" path="res://src/screens/LevelManager.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://8p8klod6lmkk" path="res://src/environment/Background.png" id="4_5jquh"]
[ext_resource type="AudioStream" uid="uid://drvygf7nu8s7v" path="res://assets/sound/UI/Minimalist10.ogg" id="4_mk1ol"]
[ext_resource type="PackedScene" uid="uid://dcs72phuegkmk" path="res://src/game/ui/CharacterSelectMenu.tscn" id="6_io8u3"]
[ext_resource type="AudioStream" uid="uid://cc6m3sf0a4did" path="res://assets/sound/bgm/Tracks/Ambience 3.ogg" id="6_kop1s"]
[ext_resource type="PackedScene" uid="uid://dkuwy38tjrrxs" path="res://src/game/ui/menus/OptionsMenu.tscn" id="7_cwbr0"]
[ext_resource type="Texture2D" uid="uid://ddo8ji8phouh1" path="res://assets/textures/mouse/pointer.png" id="10"]
[ext_resource type="PackedScene" uid="uid://c1jb1up3g5dl8" path="res://src/game/singletons/WorldEnviroment.tscn" id="10_r64ll"]

[node name="MainMenu" type="Node"]
script = ExtResource("1")
level_manager_scene = ExtResource("4")
focus_sfx = ExtResource("3_tccjc")
click_sfx = ExtResource("4_mk1ol")
mouse_cursor = ExtResource("10")

[node name="Background" type="CanvasLayer" parent="."]
layer = 2

[node name="TextureRect" type="TextureRect" parent="Background"]
z_as_relative = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_5jquh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Container" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer/Container"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -50.5
offset_bottom = 50.5
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer/Container/Buttons"]
layout_mode = 2
text = "BUTTON_START"

[node name="OptionsButton" type="Button" parent="CanvasLayer/Container/Buttons"]
layout_mode = 2
text = "BUTTON_OPTIONS"

[node name="ExitButton" type="Button" parent="CanvasLayer/Container/Buttons"]
layout_mode = 2
text = "BUTTON_EXIT"

[node name="OptionsMenu" parent="CanvasLayer" instance=ExtResource("7_cwbr0")]
visible = false

[node name="CharacterSelect" parent="CanvasLayer" instance=ExtResource("6_io8u3")]
visible = false

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kop1s")
autoplay = true
bus = &"Music"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="WorldEnviroment" parent="." instance=ExtResource("10_r64ll")]

[connection signal="mouse_entered" from="CanvasLayer/Container/Buttons/StartButton" to="." method="on_focus"]
[connection signal="pressed" from="CanvasLayer/Container/Buttons/StartButton" to="." method="on_click"]
[connection signal="pressed" from="CanvasLayer/Container/Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Container/Buttons/OptionsButton" to="." method="on_focus"]
[connection signal="pressed" from="CanvasLayer/Container/Buttons/OptionsButton" to="." method="on_click"]
[connection signal="pressed" from="CanvasLayer/Container/Buttons/OptionsButton" to="CanvasLayer/OptionsMenu" method="show"]
[connection signal="mouse_entered" from="CanvasLayer/Container/Buttons/ExitButton" to="." method="on_focus"]
[connection signal="pressed" from="CanvasLayer/Container/Buttons/ExitButton" to="." method="on_click"]
[connection signal="pressed" from="CanvasLayer/Container/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="start_game" from="CanvasLayer/CharacterSelect" to="." method="_on_character_select_start_game"]
